--- a/src/Projects/Inicio/style.css
+++ b/src/Projects/Inicio/style.css
@@ -44,7 +44,7 @@
     flex-direction: column;
     gap: 1rem;
     padding-top: 3rem;
-
+    
 }
 
 h1,h2,h3,h4,h5{
@@ -56,7 +56,7 @@ h1,h2,h3,h4,h5{
     font-size: 3rem;
     font-weight: 900;
     color: #111;
-    
+
 }
 
 .link{
@@ -82,16 +82,22 @@ a,p{
 
     flex-wrap: wrap;
     padding: 1rem;
+    gap: 1rem;
 }
 
 .card{
-    padding: 1rem;
-    width: 50%;
+    /*padding: 1rem;*/
+    width: 40%;
     flex-grow: 1;
     min-width: 300px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 1rem;
+    background-color: #fff;
+    border-radius: 10px;
+    
+    
 }
 
 .card h3{
@@ -107,6 +113,8 @@ a,p{
     height: 300px;
     object-fit: cover;
     border-radius: 10px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 3px 5px 1px rgba(0,0,0,0.2);
 }
 
 .card_btn{
