--- a/src/Projects/02-movie-seat-booking/style.css
+++ b/src/Projects/02-movie-seat-booking/style.css
@@ -26,7 +26,7 @@
     color: #fafafa;
 }
 
-select{
+.pelicula .select{
     padding: 5px;
     border-radius: 5px
 }
@@ -43,7 +43,7 @@ select{
     color: #fafafa;
 }
 
-.asientos_col{
+.asientos_muestra .asientos_col{
     display: flex;
     flex-direction: row;
     gap: 10px;
@@ -82,7 +82,7 @@ select{
 
 /* ------------- central ------------ */
 
-.central{
+.MovieSeatBooking .central{
     display: flex;
     flex-direction: column;
     width: 500px;
@@ -122,17 +122,17 @@ select{
 
 /* ------------ resultado ----------- */
 
-.resultados{
+.MovieSeatBooking .resultados{
     display: flex;
     justify-content: center;
     align-items: center;
 
 }
 
-.resultados p{
+.MovieSeatBooking .resultados p{
     color: #fafafa;
 }
 
-.resultados b{
+.MovieSeatBooking .resultados b{
     color: rgb(35, 188, 188);
 }
