--- a/src/Projects/Inicio/style.css
+++ b/src/Projects/Inicio/style.css
@@ -41,11 +41,18 @@
     color: #fafafa;
 }
 
+.nav a{
+    text-decoration: none;
+    color: #fafafa;
+}
+
 .nav .home{
     font-size: 1.5rem;
     display: flex;
     align-items: center;
     gap: 1rem;
+    color: #fafafa;
+    text-decoration: none;
 }
 
 .nav .home:hover{
@@ -79,6 +86,14 @@
 }
 
 .navactive nav{
+    color: #222;
+}
+
+.navactive nav a{
+    color: #222;
+}
+
+.navactive nav .home{
     color: #222;
 }
 
