--- a/src/Projects/Inicio/style.css
+++ b/src/Projects/Inicio/style.css
@@ -25,6 +25,7 @@
     align-items: center;
     background-color: #00000034;
     transition: all ease 0.3s;
+    z-index: 999;
 }
 
 .nav{
@@ -39,6 +40,7 @@
     justify-content: space-between;
     align-items: center;
     color: #fafafa;
+    
 }
 
 .nav a{
